Bug 477377 - Is there a specific reason why Environment Canada engine uses HTTP and not HTTPS?
Summary: Is there a specific reason why Environment Canada engine uses HTTP and not HT...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-22 16:31 UTC by Austin Huang
Modified: 2024-07-21 22:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Austin Huang 2023-11-22 16:31:04 UTC
SUMMARY
https://invent.kde.org/plasma/plasma-workspace/-/blob/master/dataengines/weather/ions/envcan/ion_envcan.cpp
Sometimes (exact conditions unclear but it does happen in a variety of them) I can't connect to them at all, despite being able to manually visit the URLs in the source code. So I suspect that the program is not following 301 redirects...?


STEPS TO REPRODUCE
1. Attempt to search for Canadian locations.
2. 
3. 

OBSERVED RESULT
Environment Canada locations don't show up.

EXPECTED RESULT
Environment Canada locations should show up.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch Linux ARM 6.5.0-asahi-15-1-edge-ARCH (64-bit)
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.112.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Comment 1 Austin Huang 2023-11-28 16:57:52 UTC
Please ignore my initial comment, it does seem to be dependent on network conditions.
Comment 2 Nate Graham 2023-11-29 21:34:47 UTC
Probably not a good reason. Does anything break for you if you switch it to https locally? If not, Would you like to submit a merge request to change it?
Comment 3 Bug Janitor Service 2024-07-19 11:48:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4541
Comment 4 Ismael Asensio 2024-07-21 22:40:26 UTC
Git commit 329fa324728d7cc4ddcf0eb8c1a6884126624787 by Ismael Asensio.
Committed on 21/07/2024 at 22:24.
Pushed by iasensio into branch 'master'.

dataengines/weather/envcan: Use https for queries

Save unnecessary redirections from `http:` to `https:`, which
sometimes might even fail
FIXED-IN: 6.2

M  +2    -3    dataengines/weather/ions/envcan/ion_envcan.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/329fa324728d7cc4ddcf0eb8c1a6884126624787