dataengines/weather/envcan: Use https for queries

Save unnecessary redirections from `http:` to `https:`, which
sometimes might even fail

BUG: 477377
FIXED-IN: 6.2